--- a/materialyou/src/main/AndroidManifest.xml
+++ b/materialyou/src/main/AndroidManifest.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kyant.materialyou">
-
-    <uses-permission android:name="android.permission.VIBRATE" />
+<manifest package="com.kyant.materialyou">
 
 </manifest>
